src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Master</fullName>
        <description>Primary process for sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Commitment Probable</fullName>
        </values>
        <values>
            <fullName>In Hand</fullName>
        </values>
        <values>
            <fullName>Maintenance</fullName>
        </values>
        <values>
            <fullName>Origination</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Acquiring_Entity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Acquiring Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Acquiring Entity)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Status__c</fullName>
        <label>Buyer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10 - Won&apos;t Sell</fullName>
                </value>
                <value>
                    <fullName>15 - Relationship</fullName>
                </value>
                <value>
                    <fullName>20 - Research</fullName>
                    <default>true</default>
                    <label>20 - Research</label>
                </value>
                <value>
                    <fullName>25 - Outreach</fullName>
                </value>
                <value>
                    <fullName>30 - Negotiations</fullName>
                </value>
                <value>
                    <fullName>50 - Commitment Probable</fullName>
                </value>
                <value>
                    <fullName>80 - Deed for Check</fullName>
                </value>
                <value>
                    <fullName>90 - Contract Signed</fullName>
                </value>
                <value>
                    <fullName>100 - Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FMV_Per_Acre__c</fullName>
        <description>Sum of all FMV divided by Total Acres for related tracts</description>
        <formula>if (Total_Acreage__c = 0,0, Total_FMV__c /  Total_Acreage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all FMV divided by Total Acres for related tracts</inlineHelpText>
        <label>FMV Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gain_on_Asset__c</fullName>
        <description>Gain on sale (Total FMV - Total Cost)</description>
        <formula>Total_FMV__c - Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gain on sale (Total FMV - Total Cost)</inlineHelpText>
        <label>Gain on Asset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LV_Lead_ID__c</fullName>
        <description>Lookup to LandVantage</description>
        <externalId>true</externalId>
        <inlineHelpText>Lookup to LandVantage</inlineHelpText>
        <label>LV Lead ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lock_System_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used only by the trigger to force override of validation rules.</description>
        <inlineHelpText>To be used only by the trigger to force override of validation rules.</inlineHelpText>
        <label>Lock System Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organizational_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to identify organizational transfers</description>
        <label>Organizational Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Date__c</fullName>
        <label>PSA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Acreage__c</fullName>
        <label>Total Acreage</label>
        <summarizedField>Opportunity_Tract__c.Tract_Acres__c</summarizedField>
        <summaryForeignKey>Opportunity_Tract__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Per_Acre__c</fullName>
        <formula>if(Total_Cost__c = 0, 0, Total_Cost__c /  Total_Acreage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Sum of all &quot;Total Cost&quot; fields</description>
        <label>Total Cost</label>
        <summarizedField>Opportunity_Tract__c.Total_Cost__c</summarizedField>
        <summaryForeignKey>Opportunity_Tract__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_FMV__c</fullName>
        <description>Sum of all FMV from tracts used for FMV per Acre calc (Divestiture specific field)</description>
        <inlineHelpText>Sum of all FMV from tracts used for FMV per Acre calc (Divestiture specific field)</inlineHelpText>
        <label>Total FMV</label>
        <summarizedField>Opportunity_Tract__c.Fair_Market_Value__c</summarizedField>
        <summaryForeignKey>Opportunity_Tract__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_OTG_Cost_Per_Acre__c</fullName>
        <formula>IF(Total_OTG_Cost__c=0, 0, Total_OTG_Cost__c /  Total_Acreage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total OTG Cost Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_OTG_Cost__c</fullName>
        <label>Total OTG Cost</label>
        <summarizedField>Opportunity_Tract__c.OTG_Cost__c</summarizedField>
        <summaryForeignKey>Opportunity_Tract__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>askTotalPricePerAcre__c</fullName>
        <formula>if(askTotalPrice__c = 0, 0, askTotalPrice__c / Total_Acreage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ask Total Price Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>askTotalPrice__c</fullName>
        <label>Ask Total Price</label>
        <summarizedField>Opportunity_Tract__c.askTotalPrice__c</summarizedField>
        <summaryForeignKey>Opportunity_Tract__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field used in the Manage Cases modal on the Cases related list. It is initially left off the page layout in order to serve only the purpose of searching for cases in the modal.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>opportunityTypeCalculated__c</fullName>
        <formula>if( TEXT(Account.Type) == &apos;Portfolio Investment&apos; &amp;&amp;  TEXT(Acquiring_Entity__r.Type) == &apos;Portfolio Investment&apos;,
    &apos;Inter-Company&apos;,
    if(TEXT(Account.Type) != &apos;Portfolio Investment&apos; &amp;&amp;  TEXT(Acquiring_Entity__r.Type) == &apos;Portfolio Investment&apos;,
       &apos;Acquisition&apos;,
       if(TEXT(Account.Type) == &apos;Portfolio Investment&apos; &amp;&amp;  TEXT(Acquiring_Entity__r.Type) != &apos;Portfolio Investment&apos;,
          &apos;Sale&apos;,
          &apos;ERROR&apos;
         )
      )
  )</formula>
        <label>Opportunity Type Calculated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalPricePerAcre__c</fullName>
        <formula>if(totalPrice__c = 0, 0, totalPrice__c /  Total_Acreage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>totalPrice__c</fullName>
        <label>Total Price</label>
        <summarizedField>Opportunity_Tract__c.totalPrice__c</summarizedField>
        <summaryForeignKey>Opportunity_Tract__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>Acquisition_Buyer_Status_BS</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Bsnyd</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost,Closed Review,Closed Complete</value>
        </filters>
        <label>Acquisition Buyer Status - BFS</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_BV</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>Buyer_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>bveat</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Maintenance,Origination,Commitment Probable,In Hand,Closed Lost,Closed Review,Closed Complete</value>
        </filters>
        <label>Acquisition Buyer Status - BV</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_CTM</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Cmarc</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Maintenance,Origination,Commitment Probable,In Hand,Closed Lost,Closed Review,Closed Complete</value>
        </filters>
        <label>Acquisition Buyer Status - CTM</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_DCD</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>Buyer_Status__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>DDeff</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Buyer_Status__c</field>
            <operation>contains</operation>
            <value>10 - Won&apos;t Sell,15 - Relationship,20 - Research,25 - Outreach,30 - Negotiations,50 - Commitment Probable,80 - Deed for Check,90 - Contract Signed,100 - Closed</value>
        </filters>
        <label>Acquisition Buyer Status - DCD</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_DCD_None</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>Buyer_Status__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>DDeff</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Buyer_Status__c</field>
            <operation>contains</operation>
        </filters>
        <label>Acquisition Buyer Status - DCD (None)</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_DIP_Active</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>Total_OTG_Cost__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Buyer_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>PSA_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Buyer_Status__c</field>
            <operation>equals</operation>
            <value>50 - Commitment Probable,80 - Deed for Check,90 - Contract Signed,100 - Closed</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>notContain</operation>
            <value>ERC TO</value>
        </filters>
        <label>Acquisition Buyer Status - DIP - Active</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_DMB</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Buyer_Status__c</columns>
        <columns>Total_Acreage__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Dbrown</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Maintenance,Origination,Commitment Probable,In Hand,Closed Lost,Closed Review,Closed Complete</value>
        </filters>
        <label>Acquisition Buyer Status - DMB</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_DRA</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Buyer_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Raust</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Acquisition Buyer Status - DRA</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_JAT</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Jtins</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Acquisition Buyer Status - JAT</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_JS</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>Buyer_Status__c</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>jsala</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Maintenance,Origination,Commitment Probable,In Hand,Closed Lost,Closed Review,Closed Complete</value>
        </filters>
        <label>Acquisition Buyer Status - JS</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_MBJ</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>Buyer_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Buyer_Status__c</field>
            <operation>equals</operation>
            <value>10 - Won&apos;t Sell,15 - Relationship</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Mjohn</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <label>Acquisition Buyer Status - MBJ</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_MER</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Buyer_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mead</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Acquisition Buyer Status - MER</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_MER_Active</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mead</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Buyer_Status__c</field>
            <operation>equals</operation>
            <value>30 - Negotiations,50 - Commitment Probable,80 - Deed for Check,90 - Contract Signed,100 - Closed</value>
        </filters>
        <label>Acquisition Buyer Status - MER - Active</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_MTS</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Buyer_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>mscot</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Acquisition Buyer Status - MTS</label>
    </listViews>
    <listViews>
        <fullName>Acquisition_Buyer_Status_MWS</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Total_Acreage__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Acquiring_Entity__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Buyer_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Acquisition</value>
        </filters>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>contains</operation>
            <value>Mark Smith</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Acquisition Buyer Status - MWS</label>
    </listViews>
    <recordTypes>
        <fullName>Acquisition</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Acquisition</label>
    </recordTypes>
    <recordTypes>
        <fullName>Divestiture</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Divestiture</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Acquisition_Buyer_Required</fullName>
        <active>true</active>
        <description>Buyer must be set for an Acquisition</description>
        <errorConditionFormula>ISPICKVAL(Type,&apos;Acquisition&apos;) &amp;&amp; ISBLANK(Acquiring_Entity__c)</errorConditionFormula>
        <errorMessage>Acquiring Entity must be set for an Acquisition Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Divestiture_Seller_Required</fullName>
        <active>true</active>
        <description>Seller must be set for a Divestiture</description>
        <errorConditionFormula>ISPICKVAL(Type,&apos;Divestiture&apos;) &amp;&amp; ISBLANK(AccountId)</errorConditionFormula>
        <errorMessage>Seller (&quot;Account&quot; field) must be set for an Divestiture</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandateEffectiveDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(StageName,&apos;Closed Won&apos;), ISPICKVAL(Buyer_Status__c, &apos;100 - Closed&apos;)), ISBLANK( Effective_Date__c ))</errorConditionFormula>
        <errorMessage>Effective date is mandatory for Closed Won stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_fields_for_Closed</fullName>
        <active>true</active>
        <description>If it&apos;s closed won, enforce specific fields</description>
        <errorConditionFormula>(ISPICKVAL(StageName,&apos;Closed Won&apos;)) &amp;&amp; (ISBLANK(CloseDate) || ISBLANK(Acquiring_Entity__c))</errorConditionFormula>
        <errorMessage>In order to close, an Acquiring Entity and Close Date must be set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_must_match_Record_Type</fullName>
        <active>false</active>
        <errorConditionFormula>Text(Type) != RecordType.Name</errorConditionFormula>
        <errorDisplayField>Type</errorDisplayField>
        <errorMessage>Opportunity Type (Acquisition, Divestiture) must match Record Type</errorMessage>
    </validationRules>
</CustomObject>